# deck

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
examples/: demo.md
src/: app.rs  background.rs  bigtext.rs  entrance.rs  highlight.rs  image_renderer.rs  input.rs  main.rs  markdown.rs  parse.rs  render.rs  render_presenter.rs  sync.rs  theme.rs  transition.rs  util.rs
