[package]
name = "deck"
version = "0.2.0"
edition = "2021"
description = "Terminal presentations with style - animated backgrounds, hacker aesthetic, presenter mode"
authors = ["Thijs Vos"]
license = "MIT"
repository = "https://github.com/thijsvos/deck"
readme = "README.md"
keywords = ["terminal", "presentation", "tui", "slides", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
pulldown-cmark = "0.13"
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
base64 = "0.22"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
